Fix for EM errors not showing within the TML error p tag EM uses p tags for errors which causes browsers to close the .error p tag. Hack by substituting the p tag for a div and applying same styling. Refs #6

--- a/style.css
+++ b/style.css
@@ -499,6 +499,14 @@ body.single-event .mnm-events-list {
 
 /************* Profile ***********/
 
+.login div.error {
+  padding: 5px;
+  border: 1px solid #c00;
+  background-color: #ffebe8;
+  color: #333;
+  margin-bottom: 20px;
+}
+
 #your-profile .form-table {
   width: 100%;
 }
